# cricket

./: .env.example  .gitattributes  .gitignore  README.md  STATUS.md  TODO.md  config.example.toml  conftest.py  pyproject.toml
cloud/: README.md  aws_common.py  cli.py  provision.py  run.py  teardown.py  transfer.py
corpus/: SUMMARY.md
cricket/: __init__.py  __main__.py  activity.py  auth.py  cli.py  config.py  control.py  ctl.py  daemon.py  http_api.py  router.py  stream_server.py  supervisor.py  trace.py
data/: cricket-config.sqlite3  e2e_transcript.md  judge_poses.json  scene_critique.md  scene_transcript.md
docs/: CONFIG.md  DESIGN.md  INFERENCE_BACKEND.md  OPERATIONS.md  PERSONA_AFFORDANCES.md  RP-DESIGN.md  chain-of-thought-reasoning.md  finetune-design.md  improving-rp-quality.md  mush-db-crossref.md  overnight-run.md  rp-finetune-handoff.md  websockets.md
evals/: __init__.py  ab_models.py  ab_sampling.py  ab_thinking.py  goal_cases.json  goals.py  judge.py  judge_gen.py  replay.py  run.py  scene_replay.py  scorers.py  test_goals.py  test_judge.py  test_replay.py  test_run.py  test_scorers.py
lore/: CRICKET-HISTORY.md  CRICKET.md  RP-CHARTER.md
models/: Modelfile.lunaris  Modelfile.rocinante  mistral.tmpl
ollama/: Modelfile
players/: .bazil-mckenzie.md.swp  README.md  ak.md  bazil-mckenzie.md  blulurbgloblurb-druze.md  crestian-tarasar.md  cricket.md  etiel-te-danaan.md  jessalyn-valios.md  johanna-te-danaan.md  longinus-van-sen.md  lorn-rhys.md  nara-rhen.md  nasiri-gejalli.md  quinne-stardust-rose.md  selko-aronat.md  skawn-kairn.md  v1c3.md  (+4 more)
(+9120 files in other folders)
