[project]
name = "cricket"
version = "0.1.0"
description = "A PennMUSH bot: static command logic plus a swappable LLM persona."
requires-python = ">=3.11"
# websockets: the inbound transport (WS + oob JSON, unforgeable speaker attribution). The bot's
# lifeline connection -- a maintained lib handles framing/ping-pong/close far more safely than
# hand-rolled RFC 6455. The legacy telnet transport stays available (CRICKET_MUSH_TRANSPORT=telnet).
dependencies = ["websockets>=12", "prompt_toolkit>=3"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cricket = "cricket.cli:main"
cricket-ctl = "cricket.cli:ctl_main"

[tool.uv]
package = false
python-preference = "only-system"

[tool.pytest.ini_options]
testpaths = ["tests"]
